# vchimera

./: CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  environment.yml  pyproject.toml  rebuild_eval_seed_sweep.py  requirements.txt
configs/: cleanup_baseline.yaml  cleanup_ia.yaml  cleanup_iml.yaml  cleanup_iml_high_review.yaml  cleanup_iml_monitor_only.yaml  cleanup_iml_sanction_no_review.yaml  cleanup_si.yaml  harvest_baseline.yaml  harvest_ia.yaml  harvest_iml.yaml  harvest_iml_high_review.yaml  harvest_iml_monitor_only.yaml  harvest_iml_sanction_no_review.yaml  harvest_si.yaml
configs/calibration/: targets_default.yaml
configs/experiments/: cyborg_transfer.yaml  cyborg_transfer_journal.yaml  journal_demo.yaml  journal_main.yaml  journal_sample.yaml  quick.yaml  sensitivity.yaml
iml_ssd/: config.py
iml_ssd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paper/: README.md  main.tex  refs.bib  vchimera_cybersecurity.tex  vchimera_cybersecurity_clean.tex
robustness/: eval_seed_paired_deltas.csv  eval_seed_robustness_summary.csv  robust_eval_seed.py  sensitivity_cleanup_iml.py  sensitivity_cleanup_iml_grid.csv
runs/: calibration_social_20260210.yaml  calibration_social_q1.yaml  calibration_social_q1_v2.yaml  journal_sample_runlog.txt
scripts/: calibrate_social.py  compile_paper.py  diagnose_env.sh  install_ssd_no_ray.sh  make_paper_assets.py  run_all.py  run_experiments.py  run_full_sweep.sh  run_sensitivity.py  run_sweep.sh  smoke_test.py  stat_tests.py
vchimera/: coupling.py  env.py  factory.py  metrics.py  protocol.py  utils.py
(+63 files in other folders)
