[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iml-ssd"
version = "0.1.0"
description = "Institutional Monitoring Ledger (IML) experiment pipeline for Sequential Social Dilemmas (Harvest/Cleanup)."
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="(anonymous)"}]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "matplotlib>=3.5",
  "pyyaml>=6.0",
  "tqdm>=4.60",
  "torch>=2.0",
  "tensorboard>=2.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["iml_ssd*"]
